# machine-sdk

./: .dockerignore  README.md  __init__.py  pyproject.toml
example/: .env  example.py  kv.py  mcp_server.py
kortix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
machine/: agent.py  kortix.py  models.py  thread.py  tools.py  utils.py
machine/api/: agents.py  threads.py  utils.py
machine_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
